fix empty place buttons bug, fix share modal scroll and horizontal scroll, small css fixes, rename place-buttons.ts

--- a/src/dotnet/Chat.UI.Blazor/Components/AccountModal/account-modal.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/AccountModal/account-modal.css
@@ -49,6 +49,7 @@
 }
 .author-modal .c-header > .c-center > .c-buttons .btn.btn-round {
     @apply bg-[var(--round-right-panel)];
+    @apply shadow-modal-header-btn;
 }
 .author-modal .c-header > .c-center > .c-buttons .btn.btn-round .btn-content {
     @apply text-primary;
